package io.github.fontysvenlo.ais.persistence;

import java.util.ArrayList;
import java.util.Collections;
import java.util.List;

import javax.sql.DataSource;

import io.github.fontysvenlo.ais.datarecords.EmployeeData;
import io.github.fontysvenlo.ais.persistence.api.EmployeeRepository;

/**
 * This class knows everything about storing and retrieving customers from the
 * database. At the moment only returns dummy object with an id that is set.
 * Normally it will connect to a database and do all the handling.
 */
class EmployeeRepositoryImpl implements EmployeeRepository {

    private final DataSource db;
    // Initialize with empty list instead of test data - will be populated through UI
    private final List<EmployeeData> employees = new ArrayList<>();

    public EmployeeRepositoryImpl(DBConfig config) {
        this.db = DBProvider.getDataSource(config);
    }

    @Override
    public EmployeeData add(EmployeeData employeeData) {
        // Create dummy EmployeeData object with id. Normally, the id would be generated by the database
        int maxId = employees.stream().mapToInt(EmployeeData::id).max().orElse(0);
        EmployeeData employeeDataWithId = new EmployeeData(++maxId, employeeData.Firstname(), employeeData.Lastname(), employeeData.Email(), employeeData.Password(), employeeData.Type());
        employees.add(employeeDataWithId);
        return employeeDataWithId;
    }

    @Override
    public EmployeeData update(EmployeeData employeeData) {
        for (int i = 0; i < employees.size(); i++) {
            if (employees.get(i).id() == employeeData.id()) {
                employees.set(i, employeeData);
                return employeeData;
            }
        }
        return null;
    }

    @Override
    public EmployeeData delete(String id) {
        try {
            int employeeId = Integer.parseInt(id);
            EmployeeData employeeToRemove = employees.stream()
                    .filter(employee -> employee.id() == employeeId)
                    .findFirst()
                    .orElse(null);

            if (employeeToRemove != null) {
                employees.remove(employeeToRemove);
                return employeeToRemove;
            }
            return null;
        } catch (NumberFormatException e) {
            return null; // Return null if the ID isn't a valid integer
        }
    }

    @Override
    public EmployeeData getOne(String id) {
        try {
            int employeeId = Integer.parseInt(id);
            System.out.println("Employee ID: " + employeeId);
            return employees.stream()
                    .filter(employee -> employee.id() == employeeId)
                    .findFirst()
                    .orElse(null);
        } catch (NumberFormatException e) {
            return null; // Return null if the ID isn't a valid integer
        }
    }

    @Override
    public List<EmployeeData> getAll() {
        // TODO: Implement the actual database storage
        // For now, return a dummy list
        return Collections.unmodifiableList(employees);
    }
}
